--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.5.1",
+    "@reduxjs/toolkit": "^2.6.0",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
     "http-status-codes": "^2.3.0",
-    "mongodb": "^6.13.0",
-    "mongoose": "^8.10.1",
+    "mongodb": "^6.13.1",
+    "mongoose": "^8.11.0",
     "next": "15.1.7",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "sass": "^1.85.0"
+    "sass": "^1.85.1"
   },
   "devDependencies": {
     "@types/node": "^20.17.19",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "typescript": "^5.7.3"
-  }
+  },
+  "engines": { "node": "20.x" }
 }
