--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "http-status-codes": "^2.3.0",
     "mongodb": "^6.13.1",
     "mongoose": "^8.11.0",
-    "next": "15.1.7",
+    "next": "15.3.0",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -27,5 +27,10 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "typescript": "^5.7.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
