--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "http-status-codes": "^2.3.0",
     "mongodb": "^6.13.1",
     "mongoose": "^8.11.0",
     "next": "15.3.0",
     "next-auth": "5.0.0-beta.25",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
