--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.11.0",
     "next": "15.3.0",
     "next-auth": "5.0.0-beta.25",
+    "node": "^22.16.0",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -32,6 +33,7 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "node",
       "sharp"
     ]
   },
